--- a/src/GLGraphs.Wpf/GLGraphs.Wpf.csproj
+++ b/src/GLGraphs.Wpf/GLGraphs.Wpf.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1-windows</TargetFramework>
+        <TargetFramework>net7.0-windows7.0</TargetFramework>
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="OpenTK" Version="4.3.0" />
-      <PackageReference Include="OpenTK.GLWpfControl" Version="4.1.0" />
+      <PackageReference Include="OpenTK" Version="4.8.2" />
+      <PackageReference Include="OpenTK.GLWpfControl" Version="4.3.1" />
     </ItemGroup>
 
     <ItemGroup>
