--- a/src/GLGraphs/GLGraphs.csproj
+++ b/src/GLGraphs/GLGraphs.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
-      <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
+      <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
+      <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
       <PackageReference Include="ObjectTK" Version="2.0.0-pre.9" />
-      <PackageReference Include="OpenTK" Version="4.3.0" />
-      <PackageReference Include="System.Drawing.Common" Version="6.0.0-preview.1.21102.12" />
+      <PackageReference Include="OpenTK" Version="4.8.2" />
+      <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
     </ItemGroup>
 
     <ItemGroup>
